ghost/admin/app/styles/app-dark.css
/* ... */
.gh-mention-your-link.has-multiple-links {
    border-bottom: 1px dashed var(--midlightgrey);
}

.gh-mention-header .popover {
    background-color: #1c1e21;
    color: var(--darkgrey);
}

.gh-dashboard-mentions-container {
    background: #1c1e21;
}

.gh-dashboard-mentions-header {
    border-color: #2b2d31;
}

.gh-dashboard-mention:hover {
    background: var(--whitegrey-d1);
}

/* Feedback form */
.gh-editor-feedback-dropdown {
    background: var(--whitegrey-l1);
}

